tests/compile-tests/eq_range.stderr
error: Use '..' for bounds and range constraints
 --> tests/compile-tests/eq_range.rs:6:28
  |
6 |     c!(x + y + 2*z + 1 in 0..=1);
  |                            ^^^

error: Use '..' for bounds and range constraints
 --> tests/compile-tests/eq_range.rs:7:27
  |
7 |     c!(x + y + 2*z + 1 in ..=1);
  |                           ^^^
